--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,12 @@
             <version>6.10.4</version>
             <scope>test</scope>
         </dependency>
-
-
+        
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.12</version>
+        </dependency>
     </dependencies>
 
 </project>
