--- a/configuration.properties
+++ b/configuration.properties
@@ -1,2 +1,3 @@
 browser=chrome
-amazon_startSeite=https://www.amazon.com/
+amazon_startSeite=https://www.amazon.com
+bestbuy_startSeite = https://www.bestbuy.com
