--- a/configuration.properties
+++ b/configuration.properties
@@ -1,3 +1,4 @@
 browser=chrome
 amazon_startSeite=https://www.amazon.com
 bestbuy_startSeite = https://www.bestbuy.com
+data_tables_url=https://editor.datatables.net
